Added main layout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <container class="dashboard-container">
       <section class="sidebar">Dashboard Aside</section>
+        <section class="header">Header</section>
       <section class="main-content">Dashboard</section>
     </container>
   </body>
