Dashboard grid completed

--- a/index.html
+++ b/index.html
@@ -9,8 +9,27 @@
   </head>
   <body>
     <container class="dashboard-container">
-      <section class="sidebar">Dashboard Aside</section>
-        <section class="header">Header</section>
+      <section class="sidebar">
+        <div class="sidebar-header">Dashboard</div>
+        <div class="sidebar-nav">
+          <ul>
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Tasks</li>
+            <li>Communities</li>
+          </ul>
+        </div>
+        <div class="sidebar-settings">
+          <ul>
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+          </ul>
+        </div>
+      </section>
+      <section class="header">Header</section>
       <section class="main-content">Dashboard</section>
     </container>
   </body>
