Add header grid

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
           </ul>
         </div>
       </section>
-      <section class="header">Header</section>
+      <section class="header">
+        <div class="search">Search bar here</div>
+        <div class="profile">Profile icons here</div>
+        <div class="intro">Intro images and stuff</div>
+        <div class="header-buttons">buttons!</div>
+      </section>
       <section class="main-content">Dashboard</section>
     </container>
   </body>
