Add intro section and shadow

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
       </section>
       <section class="header">
+        <!-- search section -->
         <div class="search">
           <div id="search-icon" class="icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
@@ -41,6 +42,7 @@
           </div>
           <div class="search-bar"></div>
         </div>
+        <!-- profile section -->
         <div class="profile">
           <div id="notification-icon" class="icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -55,7 +57,16 @@
           </div>
           <div class="small-name">Wiryawan Onggo</div>
         </div>
-        <div class="intro">Intro images and stuff</div>
+        <!-- intro section -->
+        <div class="intro">
+          <div id="intro-profile" class="profile-icon">
+            <img src="images/profile.png" />
+          </div>
+          <div>
+            <p>Hi there,</p>
+            <p>Wiryawan Ekaputra Onggo @WEO</p>
+          </div>
+        </div>
         <div class="header-buttons">
           <button class="header-button">New</button>
           <button class="header-button">Upload</button>
