Add main content section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
           <button class="header-button">Share</button>
         </div>
       </section>
-      <section class="main-content">Dashboard</section>
+      <section class="main-content">
+        <div class="projects">
+          <div><p>Your Projects</p></div>
+        </div>
+        <div class="announcements"></div>
+        <div class="trending"></div>
+      </section>
     </container>
   </body>
 </html>
