Add cards to main content section (projects)

--- a/index.html
+++ b/index.html
@@ -75,7 +75,49 @@
       </section>
       <section class="main-content">
         <div class="projects">
-          <div><p>Your Projects</p></div>
+          <div class="projects-header"><p>Your Projects</p></div>
+          <div class="card">
+            <div class="side-card"></div>
+            <div class="card-content">
+              <p>Super Cool Project</p>
+              <p>Some Text</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="side-card"></div>
+            <div class="card-content">
+              <p>Super Cool Project</p>
+              <p>Some Text</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="side-card"></div>
+            <div class="card-content">
+              <p>Super Cool Project</p>
+              <p>Some Text</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="side-card"></div>
+            <div class="card-content">
+              <p>Super Cool Project</p>
+              <p>Some Text</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="side-card"></div>
+            <div class="card-content">
+              <p>Super Cool Project</p>
+              <p>Some Text</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="side-card"></div>
+            <div class="card-content">
+              <p>Super Cool Project</p>
+              <p>Some Text</p>
+            </div>
+          </div>
         </div>
         <div class="announcements"></div>
         <div class="trending"></div>
