Add announcement section content

--- a/index.html
+++ b/index.html
@@ -76,50 +76,65 @@
       <section class="main-content">
         <div class="projects">
           <div class="projects-header"><p>Your Projects</p></div>
-          <div class="card">
-            <div class="side-card"></div>
-            <div class="card-content">
-              <p>Super Cool Project</p>
-              <p>Some Text</p>
+          <div class="card-stack">
+            <div class="card">
+              <div class="side-card"></div>
+              <div class="card-content">
+                <p>Super Cool Project</p>
+                <p>Some Text</p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="side-card"></div>
-            <div class="card-content">
-              <p>Super Cool Project</p>
-              <p>Some Text</p>
+            <div class="card">
+              <div class="side-card"></div>
+              <div class="card-content">
+                <p>Super Cool Project</p>
+                <p>Some Text</p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="side-card"></div>
-            <div class="card-content">
-              <p>Super Cool Project</p>
-              <p>Some Text</p>
+            <div class="card">
+              <div class="side-card"></div>
+              <div class="card-content">
+                <p>Super Cool Project</p>
+                <p>Some Text</p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="side-card"></div>
-            <div class="card-content">
-              <p>Super Cool Project</p>
-              <p>Some Text</p>
+            <div class="card">
+              <div class="side-card"></div>
+              <div class="card-content">
+                <p>Super Cool Project</p>
+                <p>Some Text</p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="side-card"></div>
-            <div class="card-content">
-              <p>Super Cool Project</p>
-              <p>Some Text</p>
+            <div class="card">
+              <div class="side-card"></div>
+              <div class="card-content">
+                <p>Super Cool Project</p>
+                <p>Some Text</p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="side-card"></div>
-            <div class="card-content">
-              <p>Super Cool Project</p>
-              <p>Some Text</p>
+            <div class="card">
+              <div class="side-card"></div>
+              <div class="card-content">
+                <p>Super Cool Project</p>
+                <p>Some Text</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="announcements"></div>
+        <div class="announcements">
+          <div class="announcements-header"><p>Announcements</p></div>
+          <div class="announcements-card">
+            <div class="announcement-content">
+              <p>Site Maintenance</p>
+            </div>
+            <div class="announcement-content">
+              <p>Community Share Day</p>
+            </div>
+            <div class="announcement-content">
+              <p>Updated Privacy Policy</p>
+            </div>
+          </div>
+        </div>
         <div class="trending"></div>
       </section>
     </container>
