--- a/index.html
+++ b/index.html
@@ -135,7 +135,18 @@
             </div>
           </div>
         </div>
-        <div class="trending"></div>
+        <div class="trending">
+          <div class="trending-header"><p>Trending</p></div>
+          <div class="trending-card">
+            <div class="trending-profile">
+              <p>@Teagan</p>
+            </div>
+            <div class="trending-profile"><p>@Teagan</p></div>
+            <div class="trending-profile"><p>@Teagan</p></div>
+            <div class="trending-profile"><p>@Teagan</p></div>
+            
+          </div>
+        </div>
       </section>
     </container>
   </body>
