--- a/index.html
+++ b/index.html
@@ -15,141 +15,147 @@
   </head>
   <body>
     <container class="dashboard-container">
-      <section class="sidebar">
-        <div class="sidebar-header">Dashboard</div>
-        <div class="sidebar-nav">
-          <ul>
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities</li>
-          </ul>
-        </div>
-        <div class="sidebar-settings">
-          <ul>
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
-          </ul>
+      <section class="sidebar-section">
+        <div class="sidebar">
+          <div class="sidebar-header">Dashboard</div>
+          <div class="sidebar-nav">
+            <ul>
+              <li>Home</li>
+              <li>Profile</li>
+              <li>Messages</li>
+              <li>History</li>
+              <li>Tasks</li>
+              <li>Communities</li>
+            </ul>
+          </div>
+          <div class="sidebar-settings">
+            <ul>
+              <li>Settings</li>
+              <li>Support</li>
+              <li>Privacy</li>
+            </ul>
+          </div>
         </div>
       </section>
-      <section class="header">
-        <!-- search section -->
-        <div class="search">
-          <div id="search-icon" class="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-              <title>magnify</title>
-              <path
-                d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
-              />
-            </svg>
+      <section class="header-section">
+        <div class="header">
+          <!-- search section -->
+          <div class="search">
+            <div id="search-icon" class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                <title>magnify</title>
+                <path
+                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
+                />
+              </svg>
+            </div>
+            <div class="search-bar"></div>
           </div>
-          <div class="search-bar"></div>
-        </div>
-        <!-- profile section -->
-        <div class="profile">
-          <div id="notification-icon" class="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-              <title>bell-outline</title>
-              <path
-                d="M10 21H14C14 22.1 13.1 23 12 23S10 22.1 10 21M21 19V20H3V19L5 17V11C5 7.9 7 5.2 10 4.3V4C10 2.9 10.9 2 12 2S14 2.9 14 4V4.3C17 5.2 19 7.9 19 11V17L21 19M17 11C17 8.2 14.8 6 12 6S7 8.2 7 11V18H17V11Z"
-              />
-            </svg>
+          <!-- profile section -->
+          <div class="profile">
+            <div id="notification-icon" class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>bell-outline</title>
+                <path
+                  d="M10 21H14C14 22.1 13.1 23 12 23S10 22.1 10 21M21 19V20H3V19L5 17V11C5 7.9 7 5.2 10 4.3V4C10 2.9 10.9 2 12 2S14 2.9 14 4V4.3C17 5.2 19 7.9 19 11V17L21 19M17 11C17 8.2 14.8 6 12 6S7 8.2 7 11V18H17V11Z"
+                />
+              </svg>
+            </div>
+            <div id="small-profile" class="profile-icon">
+              <img src="images/profile.png" />
+            </div>
+            <div class="small-name">Wiryawan Onggo</div>
           </div>
-          <div id="small-profile" class="profile-icon">
-            <img src="images/profile.png" />
+          <!-- intro section -->
+          <div class="intro">
+            <div id="intro-profile" class="profile-icon">
+              <img src="images/profile.png" />
+            </div>
+            <div>
+              <p>Hi there,</p>
+              <p>Wiryawan Ekaputra Onggo @WEO</p>
+            </div>
           </div>
-          <div class="small-name">Wiryawan Onggo</div>
-        </div>
-        <!-- intro section -->
-        <div class="intro">
-          <div id="intro-profile" class="profile-icon">
-            <img src="images/profile.png" />
+          <div class="header-buttons">
+            <button class="header-button">New</button>
+            <button class="header-button">Upload</button>
+            <button class="header-button">Share</button>
           </div>
-          <div>
-            <p>Hi there,</p>
-            <p>Wiryawan Ekaputra Onggo @WEO</p>
-          </div>
-        </div>
-        <div class="header-buttons">
-          <button class="header-button">New</button>
-          <button class="header-button">Upload</button>
-          <button class="header-button">Share</button>
         </div>
       </section>
-      <section class="main-content">
-        <div class="projects">
-          <div class="projects-header"><p>Your Projects</p></div>
-          <div class="card-stack">
-            <div class="card">
-              <div class="side-card"></div>
-              <div class="card-content">
-                <p>Super Cool Project</p>
-                <p>Some Text</p>
+      <section class="main-content-section">
+        <div class="main-content">
+          <div class="projects">
+            <div class="projects-header"><p>Your Projects</p></div>
+            <div class="card-stack">
+              <div class="card">
+                <div class="side-card"></div>
+                <div class="card-content">
+                  <p>Super Cool Project</p>
+                  <p>Some Text</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <div class="side-card"></div>
-              <div class="card-content">
-                <p>Super Cool Project</p>
-                <p>Some Text</p>
+              <div class="card">
+                <div class="side-card"></div>
+                <div class="card-content">
+                  <p>Super Cool Project</p>
+                  <p>Some Text</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <div class="side-card"></div>
-              <div class="card-content">
-                <p>Super Cool Project</p>
-                <p>Some Text</p>
+              <div class="card">
+                <div class="side-card"></div>
+                <div class="card-content">
+                  <p>Super Cool Project</p>
+                  <p>Some Text</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <div class="side-card"></div>
-              <div class="card-content">
-                <p>Super Cool Project</p>
-                <p>Some Text</p>
+              <div class="card">
+                <div class="side-card"></div>
+                <div class="card-content">
+                  <p>Super Cool Project</p>
+                  <p>Some Text</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <div class="side-card"></div>
-              <div class="card-content">
-                <p>Super Cool Project</p>
-                <p>Some Text</p>
+              <div class="card">
+                <div class="side-card"></div>
+                <div class="card-content">
+                  <p>Super Cool Project</p>
+                  <p>Some Text</p>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <div class="side-card"></div>
-              <div class="card-content">
-                <p>Super Cool Project</p>
-                <p>Some Text</p>
+              <div class="card">
+                <div class="side-card"></div>
+                <div class="card-content">
+                  <p>Super Cool Project</p>
+                  <p>Some Text</p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="announcements">
-          <div class="announcements-header"><p>Announcements</p></div>
-          <div class="announcements-card">
-            <div class="announcement-content">
-              <p>Site Maintenance</p>
-            </div>
-            <div class="announcement-content">
-              <p>Community Share Day</p>
-            </div>
-            <div class="announcement-content">
-              <p>Updated Privacy Policy</p>
+          <div class="announcements">
+            <div class="announcements-header"><p>Announcements</p></div>
+            <div class="announcements-card">
+              <div class="announcement-content">
+                <p>Site Maintenance</p>
+              </div>
+              <div class="announcement-content">
+                <p>Community Share Day</p>
+              </div>
+              <div class="announcement-content">
+                <p>Updated Privacy Policy</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="trending">
-          <div class="trending-header"><p>Trending</p></div>
-          <div class="trending-card">
-            <div class="trending-profile">
-              <p>@Teagan</p>
+          <div class="trending">
+            <div class="trending-header"><p>Trending</p></div>
+            <div class="trending-card">
+              <div class="trending-profile">
+                <p>@Teagan</p>
+              </div>
+              <div class="trending-profile"><p>@Teagan</p></div>
+              <div class="trending-profile"><p>@Teagan</p></div>
+              <div class="trending-profile"><p>@Teagan</p></div>
             </div>
-            <div class="trending-profile"><p>@Teagan</p></div>
-            <div class="trending-profile"><p>@Teagan</p></div>
-            <div class="trending-profile"><p>@Teagan</p></div>
           </div>
         </div>
       </section>
