Added all content with missing icons/styling

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div id="intro-profile" class="profile-icon">
               <img src="images/profile.png" />
             </div>
-            <div>
+            <div class="intro-text">
               <p>Hi there,</p>
               <p>Wiryawan Ekaputra Onggo @WEO</p>
             </div>
@@ -92,42 +92,72 @@
                 <div class="side-card"></div>
                 <div class="card-content">
                   <p>Super Cool Project</p>
-                  <p>Some Text</p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Mauris pulvinar, enim at fermentum feugiat, nibh ipsum
+                    dapibus massa, eu facilisis felis augue in augue. Fusce a
+                    maximus ante.
+                  </p>
                 </div>
               </div>
               <div class="card">
                 <div class="side-card"></div>
                 <div class="card-content">
                   <p>Super Cool Project</p>
-                  <p>Some Text</p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Mauris pulvinar, enim at fermentum feugiat, nibh ipsum
+                    dapibus massa, eu facilisis felis augue in augue. Fusce a
+                    maximus ante.
+                  </p>
                 </div>
               </div>
               <div class="card">
                 <div class="side-card"></div>
                 <div class="card-content">
                   <p>Super Cool Project</p>
-                  <p>Some Text</p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Mauris pulvinar, enim at fermentum feugiat, nibh ipsum
+                    dapibus massa, eu facilisis felis augue in augue. Fusce a
+                    maximus ante.
+                  </p>
                 </div>
               </div>
               <div class="card">
                 <div class="side-card"></div>
                 <div class="card-content">
                   <p>Super Cool Project</p>
-                  <p>Some Text</p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Mauris pulvinar, enim at fermentum feugiat, nibh ipsum
+                    dapibus massa, eu facilisis felis augue in augue. Fusce a
+                    maximus ante.
+                  </p>
                 </div>
               </div>
               <div class="card">
                 <div class="side-card"></div>
                 <div class="card-content">
                   <p>Super Cool Project</p>
-                  <p>Some Text</p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Mauris pulvinar, enim at fermentum feugiat, nibh ipsum
+                    dapibus massa, eu facilisis felis augue in augue. Fusce a
+                    maximus ante.
+                  </p>
                 </div>
               </div>
               <div class="card">
                 <div class="side-card"></div>
                 <div class="card-content">
                   <p>Super Cool Project</p>
-                  <p>Some Text</p>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Mauris pulvinar, enim at fermentum feugiat, nibh ipsum
+                    dapibus massa, eu facilisis felis augue in augue. Fusce a
+                    maximus ante.
+                  </p>
                 </div>
               </div>
             </div>
@@ -137,12 +167,21 @@
             <div class="announcements-card">
               <div class="announcement-content">
                 <p>Site Maintenance</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+              <div class="announcement-content">
+                <hr />
               </div>
               <div class="announcement-content">
                 <p>Community Share Day</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+              <div class="announcement-content">
+                <hr />
               </div>
               <div class="announcement-content">
                 <p>Updated Privacy Policy</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
             </div>
           </div>
@@ -150,11 +189,41 @@
             <div class="trending-header"><p>Trending</p></div>
             <div class="trending-card">
               <div class="trending-profile">
-                <p>@Teagan</p>
+                <div id="small-profile" class="profile-icon">
+                  <img src="images/profile.png" />
+                </div>
+                <div class="profile-info">
+                  <p>@Teagan</p>
+                  <p>Profile Info</p>
+                </div>
               </div>
-              <div class="trending-profile"><p>@Teagan</p></div>
-              <div class="trending-profile"><p>@Teagan</p></div>
-              <div class="trending-profile"><p>@Teagan</p></div>
+              <div class="trending-profile">
+                <div id="small-profile" class="profile-icon">
+                  <img src="images/profile.png" />
+                </div>
+                <div class="profile-info">
+                  <p>@Teagan</p>
+                  <p>Profile Info</p>
+                </div>
+              </div>
+              <div class="trending-profile">
+                <div id="small-profile" class="profile-icon">
+                  <img src="images/profile.png" />
+                </div>
+                <div class="profile-info">
+                  <p>@Teagan</p>
+                  <p>Profile Info</p>
+                </div>
+              </div>
+              <div class="trending-profile">
+                <div id="small-profile" class="profile-icon">
+                  <img src="images/profile.png" />
+                </div>
+                <div class="profile-info">
+                  <p>@Teagan</p>
+                  <p>Profile Info</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
