Changed dashboard name

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div id="small-profile" class="profile-icon">
               <img src="images/profile.png" />
             </div>
-            <div class="small-name">Wiryawan Onggo</div>
+            <div class="small-name">Morgan Oakley</div>
           </div>
           <!-- intro section -->
           <div class="intro">
@@ -73,7 +73,7 @@
             </div>
             <div class="intro-text">
               <p>Hi there,</p>
-              <p>Wiryawan Ekaputra Onggo @WEO</p>
+              <p>Morgan Oakley &#40; @Morgan &#41;</p>
             </div>
           </div>
           <div class="header-buttons">
